# sandworm

./: .gitignore  LICENSE  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: tox.yml
sandworm/: __init__.py  _builder.py  _console.py  _graph.py  _parallel.py  core.py  errors.py  parallel.py  support.py  target.py
scripts/: pre-commit.sh
tests/: conftest.py  test_build.py
