[metadata]
name = sandworm
version = attr: sandworm.VERSION
author = Daniel Walker
url = https://github.com/nickeldan/sandworm
description = General-purpose build tool
long_description = file: README.md
long_description_content_type = text/markdown
doc_files = README.md
license_files = LICENSE
keywords = build build-tool
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License

[options]
python_requires = >= 3.10

[flake8]
ignore = ANN101, ANN401, E203, W503
max-line-length = 110

[options.entry_points]
console_scripts =
    sandworm=sandworm:main